--- a/OfisGorevYonetim/templates/anasayfa.html
+++ b/OfisGorevYonetim/templates/anasayfa.html
@@ -17,8 +17,14 @@
     <div class="header">
         <h1>Ofis Görev Yönetim Sistemi</h1>
         <div class="nav-links">
+
             <a href="{% url 'anasayfa' %}">Ana Sayfa</a>
-            <a href="{% url 'gorevler:gorev_listesi' %}">Görevlerim</a>
+            {% if request.user.is_staff %}
+                <a href="{% url 'kullanicilar:calisan_listesi' %}">Çalışanlar</a>
+                <a href="{% url 'kullanicilar:toplu_gorev_atama' %}">Toplu Görev Ata</a>
+            {% else %}
+                <a href="{% url 'gorevler:gorev_listesi' %}">Görevlerim</a>
+            {% endif %}
             <a href="{% url 'kullanicilar:profilim' %}">Profilim</a>
             <form action="{% url 'kullanicilar:cikis' %}" method="post" style="display:inline;">
             {% csrf_token %} <button type="submit" style="background:none; border:none; color:white; font-weight:bold; cursor:pointer; font-size: 1em; padding: 0;">Çıkış Yap</button>
